# spideroak_web_crawler

./: Cargo.toml  README.md
.cargo/: config.toml
.run/: Build Client.run.xml  Build Service.run.xml  Run Client [list].run.xml  Run Client [start].run.xml  Run Client [stop].run.xml  Run Client.run.xml  Run Service.run.xml
client/: Cargo.toml
client/src/: main.rs
service/: Cargo.toml
service/src/: base_url.rs  crawler.rs  error.rs  main.rs  parser.rs  url_worker.rs
shared/: Cargo.toml
shared/src/: lib.rs
