[package]
name = "service"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
edition = "2021"
publish = false

[dependencies]
shared = { path = "../shared" }

tokio = { version = "1", features = ["full"] }
bincode = { version = "1.3" }
reqwest = { version = "0.11" }
url = { version = "2" }
log = { version = "0.4" }
env_logger = { version = "0.10" }
chrono = { version = "0.4" }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = { version = "1.0" }